Update and rename Penisium to penisium-project.json

--- a/blockchains/counterparty/penisium-project.json
+++ b/blockchains/counterparty/penisium-project.json
@@ -1,6 +1,6 @@
 {
   "chain": "counterparty",
-  "name": "Penisium",
+  "name": "Penisium Project",
   "images": {
     "avatar": "https://i.imgur.com/T8aIJSS.png",
     "banner": ""
